--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.thymeleaf.suffix=.html
 # ????????? ??????? ??? ?????? PUT, PATCH ? DELETE ??????? ? html-????
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework.security=DEBUG
