adding annotations and connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=jdbc:postgresql://localhost:5432/MenuApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/SmartMenu
 spring.datasource.username=postgres
 spring.datasource.password=1
 spring.datasource.driver-class-name=org.postgresql.Driver
