--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.1</version>
+
         </dependency>
 
         <!-- Faker -->
@@ -75,6 +76,11 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
         </dependency>
 
         <!-- Lombok -->
@@ -85,6 +91,7 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
 
     <build>
         <finalName>SmartMenu</finalName>
